2004-07-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/Goodies.c (change_goody_colorset):
	(PopupTipWindow):
	fixd colour set updating code

2004-07-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmGtk/Makefile.am (man_onedir):
	fixed FvwmGtk.1 rule when DESTDIR is set

2004-06-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmWinList/ButtonArray.c (DoButton):
	fixed a minor drawing problem

2004-06-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmConsole/FvwmConsoleC.c (main):
	handle SIGPIPE

2004-05-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmCommand/FvwmCommand.c (main):
	handle SIGPIPE

2004-03-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmGtk/Makefile.am:
	fixed FvwmGtk.1 installation

2004-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.1:
	corrected example

2004-01-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScript/Scripts/FvwmScript-Quit:
	correct reboot action

2003-06-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmGtk/Makefile.am:
	do not install FvwmGtk.1 if FvwmGtk is not built

2003-06-17  Dan Espen  <dane@mk.telcordia.com>

	* FvwmGtk/FvwmGtk.c (process_message): Off by one patch from
	Anil Madhavapeddy.

2003-05-28  Mikhael Goikhman  <migo@homemail.com>

	* FvwmGtk/FvwmGtk.1:
	* FvwmGtk/windowlist.c:
	WindowListFunc is executed now within a window context,
	so "WindowId $0" is not needed anymore in its definition.

	* FvwmEvent/FvwmEvent.c:
	* FvwmEvent/FvwmEvent.1:
	window related event handlers are now executed within a window
	context, so PassId is not really needed; several fixes

2003-04-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (main):
	* FvwmButtons/parse.c (parse_window_geometry):
	(ParseConfigLine):
	fixed Xinerama handling of ButtonGeometry option in FvwmButtons

2003-04-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (AddNewWindow):
	* FvwmPager/FvwmPager.c (list_configure):
	(list_iconify):
	(list_add):