@@ -1,3 +1,11 @@
+2004-09-27  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmPager/x_pager.c (AddNewWindow):
+	(ChangeDeskForWindow):
+	(MoveResizePagerView):
+	(ReConfigureIcons):
+	sometimes, a window being moved did not get updated in the pager,
+
 2004-07-13  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmTaskBar/Goodies.c (change_goody_colorset):
